
- :mod:`rpy2.rlike.functional` is deprecated. The functions it
  provides proved of little use and can implemented in one line.
  It will be removed with :mod:`rpy2` 3.7.

- :class:`rpy2.rlike.collections.OrdDict` is deprecated.
  :class:`rpy2.rlike.collections.NamedList` is enough to have
  a Python data structure to represent R lists or paired lists.

Bugs fixed
----------

- Fix case of `zoneinfo.ZoneInfo` object missing the attribute `zone`.
  The attribute `key` is used instead. This fixes issue #1079.


Release 3.5.17
==============

New features
------------

- `geom_curve` added to the `ggplot2` mapping.


Release 3.5.16
==============

Changes
-------

- After the embedded R is initialized the SIGINT handler is set to
  Python default handler (instead of a custom handler raising
  :class:`KeyboardInterrupt`).

Bugs fixed
----------

- :meth:`rpy2.robjects.methods.getclassdef` was not reporting
  clearly errors due unspecified package name or missing class
  definition in within the package namespace specified.

- The display of SVG figures in jupyter notebooks is fixed.
  there was a typo in the code.


Release 3.5.15
==============

New features
------------

- Checking C compiling against the R shared library can be skipped with
  the environment variable `RPY2_API_FORCE` set to `True`.

- The rinterface-level class :class:`rpy2.rinterface.SexpExtPtr` now
  also has an robject-level wrapper :class:`rpy2.robjects.ExternalPointer`,
  and a representation for class name-based conversion rules.


Bugs fixed
----------

- Fixed notebook representation of R named arrays or vectors when
  conversion rules might interfere (issue #1047).

- Multi-line in environment variables (issue #1066).

Changes
-------

- Complete drop of support for Python 3.7. It is now removed from
  the build matrix.


Release 3.5.14
==============

Bugs fixed
----------

- Fixed use of named arguments with `ExtractDelegator` (issue #1048).
